# RISCSim

./: .gitignore  AI_USAGE.md  CONTROL_UNIT_FSM_DEVELOPMENT_PLAN.md  FINAL_SUBMISSION_SUMMARY.md  PROJECTINSTRUCTIONS.md  PROJECT_ARCHITECTURE.md  PROJECT_COMPLIANCE_ANALYSIS.md  README.md  RISCV_CPU_IMPLEMENTATION_PLAN.md  SUBMISSION_SUMMARY.md  encode_riscv.py  generate_ai_report.py  pyproject.toml  requirements.txt  run_test_base.py  verify_constraints.sh  verify_hex.py
docs/: ARCHITECTURE.md  INSTRUCTION_SET.md  USAGE.md
docs/diagrams/: cpu_block_diagram.md  datapath_diagram.md
examples/: alu_control_integration.py  control_unit_demo.py  control_unit_programs.py  fpu_control_integration.py  mdu_control_integration.py  register_control_integration.py  shifter_control_integration.py
riscsim/cpu/: alu.py  control_signals.py  control_unit.py  cpu.py  datapath.py  decoder.py  (+6 more)
tests/: test_alu.py  test_bit_utils.py  test_components.py  test_control_unit.py  test_control_unit_alu.py  test_control_unit_comprehensive.py  test_control_unit_datapath.py  test_control_unit_execution.py  test_control_unit_fpu.py  test_control_unit_integration.py  test_control_unit_mdu.py  test_control_unit_performance.py  test_control_unit_programs.py  test_control_unit_shifter.py  test_cpu.py  test_cpu_integration.py  test_cpu_simulation.py  test_datapath.py  test_decoder.py  test_fetch.py  test_fpu.py  test_hex_loader.py  test_integration_comprehensive.py  test_mdu.py  test_memory.py  test_phase1_integration.py  test_programs.py  test_registers.py  test_shifter.py  test_twos_complement.py
(+14 files in other folders)
